<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            android:layout_weight="0.5">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">
            <Button
                    android:id="@+id/btn_congai"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/congai"
                    android:background="@drawable/bg_button_vietnam"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/btn_contrai"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:text="@string/contrai"
                    android:gravity="center"
                    android:background="@drawable/bg_button_vietnam"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/btn_congnghe"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:text="@string/congnghe"
                    android:gravity="center"
                    android:background="@drawable/bg_button_vietnam"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/btn_dangian"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:text="@string/dangian"
                    android:gravity="center"
                    android:background="@drawable/bg_button_vietnam"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/btn_hocduong"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:text="@string/hocduong"
                    android:gravity="center"
                    android:background="@drawable/bg_button_vietnam"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/btn_khoahoc"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/khoahoc"
                    android:background="@drawable/bg_button_vietnam"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/btn_sayxin"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:text="@string/sayxin"
                    android:gravity="center"
                    android:background="@drawable/bg_button_vietnam"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/btn_trangquynh"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:text="@string/trangquynh"
                    android:gravity="center"
                    android:background="@drawable/bg_button_vietnam"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/btn_yhoc"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:text="@string/yhoc"
                    android:gravity="center"
                    android:background="@drawable/bg_button_vietnam"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/btn_tieulam"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:text="@string/tieulam"
                    android:gravity="center"
                    android:background="@drawable/bg_button_vietnam"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
        </LinearLayout>
    </HorizontalScrollView>

    <ListView
            android:id="@+id/lv_storyvietnam"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:layout_weight="3">

    </ListView>
</LinearLayout>