<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            android:layout_weight="0.5">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">
            <Button
                    android:id="@+id/btn_nga"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nga"
                    android:background="@drawable/bg_button_foreign"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/btn_anh"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:text="@string/anh"
                    android:gravity="center"
                    android:background="@drawable/bg_button_foreign"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            <Button
                    android:id="@+id/btn_nuockhac"
                    android:layout_width="@dimen/width_button"
                    android:layout_height="wrap_content"
                    android:text="@string/nuockhac"
                    android:gravity="center"
                    android:background="@drawable/bg_button_foreign"
                    android:layout_marginLeft="@dimen/magin_left_button"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
        </LinearLayout>
    </HorizontalScrollView>

    <!--<TableRow
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="0.5"
          android:gravity="center|center_horizontal"
          android:layout_marginTop="@dimen/margin_top"
          android:showDividers="middle">
      <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/title_foreign"
              android:textSize="@dimen/textsize"
              android:textColor="@color/text_color"/>
      <TextView
              android:id="@+id/title_select"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Nga"
              android:textSize="@dimen/textsize"
              android:textColor="@color/text_color"
              android:textStyle="bold"/>
  </TableRow>-->

  <ListView
          android:id="@+id/lv_storyforeign"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:background="#FFFFFF"
          android:layout_weight="3">

  </ListView>
</LinearLayout>